--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,9 @@
-extends base.pug
+extends base
+include mixins/video
 
 block content
-    h1 I love #{potato}
+    h2 Welcome here you will see the trending videos
+    each potato in videos
+        +video(potato)
+    else
+        li Sorry noting found.
